--- a/drupal/sites/all/themes/pivot/sass/_pivot-global.scss
+++ b/drupal/sites/all/themes/pivot/sass/_pivot-global.scss
@@ -3180,3 +3180,6 @@ body {
 		}
 	}
 }
+.jwplayer{
+  overflow: hidden;
+}
